--- a/rust_playground/Cargo.toml
+++ b/rust_playground/Cargo.toml
@@ -7,4 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3.5"
+futures-timer = "3.0.2"
 rand = "0.7.3"
+itertools = "0.9.0"
+itertools-num = "0.1.3"
+plotchart = "0.2.12"
+tokio = "0.2.22"
+tokio-io = "0.1.13"
+lazy_static = "1.4.0"
