--- a/rust_playground/Cargo.toml
+++ b/rust_playground/Cargo.toml
@@ -16,3 +16,7 @@ plotchart = "0.2.12"
 tokio = "0.2.22"
 tokio-io = "0.1.13"
 lazy_static = "1.4.0"
+mongodb = "1.1.0"
+elasticsearch = "7.9.0-alpha.1"
+serde = "~1"
+serde_json = "~1"
