--- a/rust_playground/Cargo.toml
+++ b/rust_playground/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 # futures = "0.3.5"
 # futures-timer = "3.0.2"
-rand = "0.7.3"
+# rand = "0.7.3"
 # itertools = "0.9.0"
 # itertools-num = "0.1.3"
 # plotchart = "0.2.12"
